First and Second tasks

--- a/sys-stats/dockerfile
+++ b/sys-stats/dockerfile
@@ -1,7 +1,10 @@
-FROM node:alpine as build
+FROM node:alpine as web-build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY . /app
 RUN npm install
+CMD ["npm","run","build"]
 CMD ["npm","start"]
+
+
 
