--- a/api/dockerfile
+++ b/api/dockerfile
@@ -9,6 +9,5 @@ ADD . /app
 # install dependencies
 RUN pip3 install -r requirements.txt
 
-# copy the content of the local directory to the working directory
 # command to run on container start
-CMD [ "python3", "./app.py" ]
+CMD ["gunicorn", "-b", "0.0.0.0:5000","wsgi:app" ]
