--- a/sys-stats/dockerfile
+++ b/sys-stats/dockerfile
@@ -1,10 +1,10 @@
 FROM node:alpine as web-build
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY . /app
-RUN npm install
-CMD ["npm","run","build"]
-CMD ["npm","start"]
+WORKDIR /app                                 #Setting up working dir as /app
+ENV PATH /app/node_modules/.bin:$PATH        #Setting up ENV path for easier access
+COPY . /app                                  #Copying all the files to the App dir
+RUN npm install                              #Building all the dependencies for the React app
+CMD ["npm","run","build"]                    #Creating the build for production env
+CMD ["npm","start"]                          #Starting the application
 
 
 
